FPLA-872: Added validation to first respondent